# clamav-api-sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml
clamav_sdk/: __init__.py  async_client.py  async_grpc_client.py  client.py  exceptions.py  grpc_client.py  models.py
clamav_sdk/_proto/: clamav_pb2.py  clamav_pb2_grpc.py
proto/: clamav.proto
testdata/: clean.txt
tests/: conftest.py  test_async_client.py  test_async_client_extra.py  test_async_grpc_client.py  test_client.py  test_client_extra.py  test_exceptions.py  test_grpc_client.py  test_grpc_client_extra.py  test_init.py  test_integration_async.py  test_integration_grpc.py  test_integration_rest.py  test_models.py
